GNOME Bugzilla – Bug 726479
Crash while trying to pair with Nokia N900/N9
Last modified: 2014-03-17 13:29:20 UTC
On current Rawhide, with control-center 3.11.91-1 and gnome-bluetooth 3.11.3-1, I get a crash when doing: system status menu->Bluetooth Settings->device which is "Not Setup". The crash occurs when the PIN confirmation dialog pops up on the N900. I do not think that is specific to the N9/N900, but I do not have any other Bluetooth devices to hand. There seems to be several retrace reports in Fedora: https://retrace.fedoraproject.org/faf/problems/1535756/ It looks like a crash in gnome-bluetooth:
+ Trace 233350
$1 = (BluetoothPairingDialogPrivate *) 0x22f6000 (gdb) print priv->done $2 = 0x226dc50 (gdb) print priv->done->p parent_instance priv (gdb) print priv->done->p parent_instance priv (gdb) print priv->done->parent_instance $3 = {g_type_instance = {g_class = 0xaaaaaaaaaaaaaaaa}, ref_count = 2863311530, qdata = 0xaaaaaaaaaaaaaaaa} (gdb) print priv->done->priv $4 = (GtkWidgetPrivate *) 0xaaaaaaaaaaaaaaaa
commit fbd89d228ee4ea5be291b394eee29de1040a703c Author: Bastien Nocera <hadess@hadess.net> Date: Mon Mar 17 14:26:45 2014 +0100 settings: Fix crasher with latest GTK+ The way to set headers for GtkDialogues changes, and setting our titlebar in _init() might cause the default GtkDialog implementation to overwrite our widget, eventually leading to free-after-use problems. Create the titlebar in constructed instead. https://bugzilla.gnome.org/show_bug.cgi?id=726479