settings: Fix crasher with latest GTK+

The way to set headers for GtkDialogues changes, and setting
our titlebar in _init() might cause the default GtkDialog implementation
to overwrite our widget, eventually leading to free-after-use problems.

Create the titlebar in constructed instead.

https://bugzilla.gnome.org/show_bug.cgi?id=726479